# vllm-detector-adapter

./: .dockerignore  .gitignore  .isort.cfg  .prettierignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  reqs.txt  setup_requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  lint-format.yml
scripts/: copy_script.sh  targeted_pip_install.py
tests/: test_protocol.py
tests/generative_detectors/: test_base.py  test_granite_guardian.py  test_llama_guard.py
vllm_detector_adapter/: api_server.py  logging.py  package_validate.py  protocol.py  start_with_tgis_adapter.py
vllm_detector_adapter/generative_detectors/: __init__.py  base.py  granite_guardian.py  llama_guard.py
