[project]
name = "vllm-detector-adapter"
version = "0.0.1"
authors = [
  { name="Gaurav Kumbhat", email="kumbhat.gaurav@gmail.com" },
  { name="Evaline Ju", email="evaline.ju@ibm.com" },
]
description = "A lightweight adapter layer that provides detector APIs on top of vllm"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = [
    "vllm>=0.6.5"
]

[project.optional-dependencies]
vllm-tgis-adapter = [
    "vllm-tgis-adapter>=0.5.3,<0.5.4"
]

## Dev Extra Sets ##

dev-test = [
    "pytest-asyncio>=0.21.0,<0.24",
    "pytest-cov>=2.10.1,<6.0",
    "pytest-html>=3.1.1,<5.0",
    "pytest>=6.2.5,<8.0",
    "wheel>=0.38.4",
]

dev-fmt = [
    "ruff==0.4.7",
    "pre-commit>=3.0.4,<4.0",
    "pydeps>=1.12.12,<2",
]

[tool.setuptools.packages.find]
where = [""]
include = ["vllm_detector_adapter", "vllm_detector_adapter*"]
